# SE-2026

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: cat_command.hpp.954320403FE08D36.idx  command.hpp.20D33E63CEDFE65D.idx  command_factory.hpp.6C4C0A74BE359D3A.idx  echo_command.hpp.008856F308BD6260.idx  environment.hpp.1094F00EAEBBA011.idx  executor.hpp.EE6C7881CD38D667.idx  exit_command.hpp.B259C801DE7FD8A0.idx  input_reader.hpp.257A0281FCF6A322.idx  lexer.hpp.4F625A0739F5E1B6.idx  parsed_command.hpp.F682EBEBABE950EB.idx  parser.hpp.F7A7331EDEDE3DE3.idx  pipeline.hpp.D368DD99CB142346.idx  pipeline_builder.hpp.0EF4E29A555C774D.idx  pwd_command.hpp.28255263BE230D66.idx  shell.hpp.ED7B01A08A512A55.idx  substitutor.hpp.51B1211DD7DFCF02.idx  test_commands.cpp.DA5BC6EECCE40B63.idx  test_integration.cpp.0027B17797C4AC92.idx  test_lexer.cpp.44D0FF2F1604A94F.idx  test_parser.cpp.278FF92E0BA903C7.idx  test_pipeline.cpp.8CC50F8B4906B23E.idx  test_substitutor.cpp.361AF638DBDDE686.idx  token.hpp.3587FB306DE01212.idx  wc_command.hpp.F4D2C3C13C7661AE.idx
.github/workflows/: ci.yml
diagrams/: diagrams.md
docs/: ARCHITECTURE.md  TESTING.md
include/shell/: command.hpp  command_factory.hpp  environment.hpp  executor.hpp  input_reader.hpp  lexer.hpp  parsed_command.hpp  parser.hpp  pipeline.hpp  pipeline_builder.hpp  shell.hpp  substitutor.hpp  token.hpp
include/shell/commands/: cat_command.hpp  echo_command.hpp  exit_command.hpp  external_command.hpp  grep_command.hpp  pwd_command.hpp  wc_command.hpp
scripts/: check.sh  install-hooks.sh  pre-commit  pre-push  run-clang-tidy.sh
src/: environment.cpp  lexer.cpp  main.cpp  parser.cpp  pipeline.cpp  shell.cpp  token.cpp
src/shell/: command_factory.cpp  environment.cpp  executor.cpp  input_reader.cpp  lexer.cpp  main.cpp  parsed_command.cpp  parser.cpp  pipeline.cpp  pipeline_builder.cpp  shell.cpp  substitutor.cpp  token.cpp
src/shell/commands/: cat_command.cpp  echo_command.cpp  exit_command.cpp  external_command.cpp  grep_command.cpp  pwd_command.cpp  wc_command.cpp
tests/: test_commands.cpp  test_edge_cases.cpp  test_environment.cpp  test_executor.cpp  test_input_reader.cpp  test_integration.cpp  test_lexer.cpp  test_parsed_command.cpp  test_parser.cpp  test_pipeline.cpp  test_substitutor.cpp  test_token.cpp
